<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeWrite</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_document_screen">DocumentScreen</string>
    <string name="create_session_button">Create Session</string>
    <string name="join_session_button">Join Session</string>
    <string name="enter_text">Enter text here</string>
    <string name="undoButton">Undo</string>
    <string name="redoButton">Redo</string>
    <string name="title_activity_create_session">CreateSession</string>
    <string name="create_session_name">Put session name here</string>
    <string name="leave_session_button">Leave Session</string>
    <string name="end_session_button">End Session</string>
    <string name="broadcast_button">Broadcast</string>
    <string name="Switch">Switch</string>

</resources>
