<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginScreen" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/create_session_name" >
        
    </EditText>

    <Button
        android:id="@+id/button2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:text="@string/join_session_button" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/editText1"
        android:text="@string/create_session_button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/undoButton"
        android:layout_alignBottom="@+id/undoButton"
        android:layout_centerHorizontal="true"
        android:text="@string/leave_session_button" />

    <Button
        android:id="@+id/undoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EditText01"
        android:layout_below="@+id/editText1"
        android:text="@string/undoButton" />

    <Button
        android:id="@+id/redoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/EditText01"
        android:layout_below="@+id/editText1"
        android:text="@string/redoButton" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button3"
        android:text="@string/end_session_button" />

    <EditText
        android:id="@+id/EditText01"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_alignTop="@+id/button2"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/enter_text"
        android:inputType="textFilter|textNoSuggestions"
        android:scrollbars="vertical" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/undoButton"
        android:layout_alignRight="@+id/redoButton"
        android:layout_alignTop="@+id/editText1"
        android:text="TextView" />

</RelativeLayout>