<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DocumentScreen" >

  	<Button
  	    android:id="@+id/undoButton"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_alignLeft="@+id/editText1"
  	    android:layout_below="@+id/editText1"
  	    android:layout_marginTop="14dp"
  	    android:text="@string/undoButton" />

  	<Button
  	    android:id="@+id/redoButton"
  	    android:layout_width="wrap_content"
  	    android:layout_height="wrap_content"
  	    android:layout_alignBaseline="@+id/undoButton"
  	    android:layout_alignBottom="@+id/undoButton"
  	    android:layout_alignRight="@+id/editText1"
  	    android:text="@string/redoButton" />

  	<EditText
  	    android:id="@+id/editText1"
  	    android:layout_width="fill_parent"
  	    android:layout_height="350dp"
  	    android:layout_alignParentTop="true"
  	    android:layout_centerHorizontal="true"
  	    android:ems="10"
  	    android:gravity="top|left"
  	    android:hint="@string/enter_text"
  	    android:scrollbars="vertical"
  	    android:inputType="textFilter|textNoSuggestions" >

  	    <requestFocus />
  	</EditText>

</RelativeLayout>
